// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Button Component correctly 1`] = `
<button
  className="sc-kAzzGY TyMvh"
  color={undefined}
  disabled={undefined}
  onClick={[Function]}
  scale={undefined}
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 2`] = `
<button
  className="sc-kAzzGY eEwiKN"
  color="error"
  disabled={undefined}
  onClick={[Function]}
  scale="l"
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 3`] = `
<button
  className="sc-kAzzGY AXdOJ"
  color="error"
  disabled={undefined}
  onClick={[Function]}
  scale="l"
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 4`] = `
<button
  className="sc-kAzzGY kOrcG"
  color="error"
  disabled={undefined}
  onClick={[Function]}
  scale="l"
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 5`] = `
<button
  className="sc-kAzzGY ewAXmD"
  color="error"
  disabled={undefined}
  onClick={[Function]}
  scale="l"
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 6`] = `
<button
  className="sc-kAzzGY dDkmnI"
  color={undefined}
  disabled={undefined}
  onClick={[Function]}
  scale={undefined}
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 7`] = `
<button
  className="sc-kAzzGY iBpeSS"
  color={undefined}
  disabled={undefined}
  onClick={[Function]}
  scale={undefined}
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 8`] = `
<button
  className="sc-kAzzGY imZMSV"
  color={undefined}
  disabled={undefined}
  onClick={[Function]}
  scale={undefined}
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 9`] = `
<button
  className="sc-kAzzGY kCuFjI"
  color={undefined}
  disabled={true}
  onClick={[Function]}
  scale={undefined}
  type={undefined}
>
  TEST
</button>
`;
